force-app/main/default/objects/Market__c/Market__c.object-meta.xml
<CustomObject>
    <description>AIP Markets</description>
    <label>Market</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>City Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>