force-app/main/default/objects/Market__c/fields/AIP_CY_Revenues__c.field-meta.xml
<CustomField>
    <fullName>AIP_CY_Revenues__c</fullName>
    <label>Amadeus Current YTD Revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>