force-app/main/default/objects/Market__c/fields/AIP_CY_Room_Nights__c.field-meta.xml
<CustomField>
    <fullName>AIP_CY_Room_Nights__c</fullName>
    <label>Amadeus Current YTD Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>