force-app/main/default/objects/Market__c/fields/Number_of_Hotels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hotels__c</fullName>
    <inlineHelpText>Number of hotels in 1A in the 3 letter IATA code</inlineHelpText>
    <label>Number of Hotels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>