force-app/main/default/objects/Market__c/fields/Total_Number_of_Slots__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Slots__c</fullName>
    <description>Total number of AIP slots existing in this market</description>
    <inlineHelpText>Total number of AIP slots existing in this market</inlineHelpText>
    <label>Total Number of Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>