force-app/main/default/objects/Market__c/fields/Waiting_List_in_Destination__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List_in_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If property was interested to purchase but there were not slots at the time.</description>
    <label>Waiting List in Destination</label>
    <type>Checkbox</type>
</CustomField>